tests/ui/endpoint/unknown_attribute.stderr
error: Unknown attribute
 --> tests/ui/endpoint/unknown_attribute.rs:8:12
  |
8 | #[read_all(pineapple = "on pizza")]
  |            ^^^^^^^^^
